Do not use deprecated API (on Java9+)